# conduit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json  docker-compose.hub.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: config.py  container.py  main.py  models.py  templates_cfg.py
app/ado/: client.py
app/mcp_tools/: tools.py
app/memory/: service.py
app/parsing/: base.py  csharp.py  go_parser.py  markdown.py  powershell.py  registry.py  typescript.py
app/rag/: bootstrap.py  chunker.py  embedding.py  indexer.py  preprocessor.py  search.py  vector_store.py
app/sources/: ado_build.py  ado_code.py  ado_commits.py  ado_pullrequest.py  ado_release.py  ado_repo_doc.py  ado_requirements.py  ado_testcase.py  ado_testresults.py  ado_wiki.py  ado_workitem.py  base.py  custom_api.py  factory.py  http_page.py  manual.py
app/store/: secrets_store.py  source_config.py  sync_control.py  (+1 more)
docs/: configuration.md  mcp-tools.md  sources.md
src/: Conduit.slnx  docker-compose.yml
tests/: conftest.py  form_helpers.py  test_ado_connection.py  test_ado_sources.py  test_chunker.py  test_custom_api_source.py  test_form_code_repo.py  test_form_common.py  test_form_documentation.py  test_form_git_commits.py  test_form_pipeline_build.py  test_form_requirements.py  test_form_test_case.py  test_form_test_code.py  test_form_test_results.py  test_form_work_items.py  test_indexer.py  test_manual_source.py  test_models.py  test_secrets_store.py  test_source_config_store.py  test_source_factory.py  test_sync_control.py
(+133 files in other folders)
