[project]
name = "conduit"
version = "0.1.0"
description = "RAG + MCP server for Azure DevOps and documents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp[cli]>=1.0.0",
    "qdrant-client>=1.12.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "requests-ntlm>=1.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0.0",
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiofiles>=24.0.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
conduit = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-httpx>=0.34.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
